tests/reference/ast-missing_colons_init-ebb7ad8.stderr
syntax error: Token '=' is unexpected here
 --> tests/errors/missing_colons_init.f90:6:15
  |
6 |     integer n = 1 ! bad syntax
  |               ^ 
